# SolanaVerifier

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run-mir.sh  run.sh
.github/workflows/: cmake-linux.yml
src/: CMakeLists.txt  c_program.cpp  c_program.h  config.h  controller.cpp  controller.h  hir_contract.cpp  hir_contract.h  main.cpp  mir_contract.cpp  mir_contract.h  mir_statement.cpp  mir_statement.h  smt_formula.cpp  smt_formula.h  solana_contract.cpp  solana_contract.h  utils.cpp  utils.h  verification_result.cpp  verification_result.h  vulnerability.cpp  vulnerability.h
src/assets/: solana.c  solana.casset
src/mir-types/: mir_type.cpp  mir_type.h  mir_type_converter.cpp  mir_type_converter.h
src/mir-types/types/: account_info_mir_type.h  account_meta_mir_type.h  argument_mir_type.h  arguments_mir_type.h  array_mir_type.h  backtick_mir_type.h  borrow_mir_type.h  box_mir_type.h  const_mir_type.h  control_flow_mir_type.h  deref_mir_type.h  error_mir_type.h  float_mir_type.h  infallible_mir_type.h  int_mir_type.h  iter_mir_type.h  mutable_mir_type.h  optional_mir_type.h  panic_assert_kind_mir_type.h  pubkey_mir_type.h  rc_mir_type.h  ref_cell_mir_type.h  ref_mir_type.h  ref_mut_mir_type.h  rent_mir_type.h  result_mir_type.h  solana_instruction_mir_type.h  string_mir_type.h  struct_mir_type.h  tuple_mir_type.h  uint_mir_type.h  vec_mir_type.h  void_mir_type.h
src/mir-values/: mir_value.cpp  mir_value.h  mir_value_converter.cpp  mir_value_converter.h
src/mir-values/values/: account_info_assign_mir_value.h  account_info_realloc_mir_value.h  addition_mir_value.h  align_of_mir_value.h  any_mir_value.h  array_indexer_mir_value.h  as_box_mir_value.h  as_break_mir_value.h  as_continue_mir_value.h  as_ok_mir_value.h  as_some_mir_value.h  as_string_mir_value.h  assert_failed_mir_value.h  bitand_mir_value.h  bitor_mir_value.h  bitxor_mir_value.h  borrow_mir_value.h  borrow_mutable_mir_value.h  box_indexer_mir_value.h  checked_add_mir_value.h  checked_div_mir_value.h  checked_mul_mir_value.h  checked_sub_mir_value.h  clone_mir_value.h  const_bool_mir_value.h  const_function_mir_value.h  const_number_max_mir_value.h  const_number_min_mir_value.h  const_number_mir_value.h  const_string_mir_value.h  const_void_mir_value.h  conversion_mir_value.h  create_account_mir_value.h  create_program_address_mir_value.h  data_is_empty_mir_value.h  deref_mir_value.h  deserialize_mir_value.h  discriminant_mir_value.h  division_mir_value.h  drop_mir_value.h  (+63 more)
tests/: run-contract.sh  run-mir.sh
tests/helloworld/contract/: Cargo.toml
tests/helloworld/results/: result.cpp  result.hir  result.mir  result_linux.mir  result_linux.smt2
tests/helloworldmaths/contract/: Cargo.toml
tests/helloworldmaths/contract/src/: lib.rs
tests/helloworldmaths/results/: result.hir  result.mir
tests/helloworldmaths_overflow/contract/: Cargo.toml
tests/helloworldmaths_overflow/contract/src/: lib.rs
tests/helloworldmaths_overflow/results/: result.mir
tests/level0/contract/src/: processor.rs
tests/level0/results/: .result.mir.swp  result.hir  result.mir
tests/level1/contract/src/: processor.rs
tests/official/account-data/contract/: Cargo.toml
tests/official/account-data/results/: result.hir  result.mir
tests/official/checking-accounts/contract/: Cargo.toml
tests/official/checking-accounts/results/: result.mir
tests/official/close-account/contract/: Cargo.toml
tests/official/close-account/results/: result.hir  result.mir
tests/official/counter/contract/: Cargo.toml
tests/official/counter/results/: result.hir  result.mir
tests/official/create-account/contract/: Cargo.toml
tests/official/create-account/results/: result.hir  result.mir
tests/official/hello-solana/contract/: Cargo.toml
tests/official/hello-solana/results/: result.mir
tests/official/level0/contract/: Cargo.toml
tests/official/level1/contract/: Cargo.toml
tests/official/level1/results/: result.hir
tests/official/level2/contract/: Cargo.toml
tests/official/level2/results/: result.hir  result.mir
tests/official/level3/contract/: Cargo.toml
tests/official/level3/contract/src/: processor.rs
tests/official/level3/results/: result.hir  result.mir
tests/official/level4/contract/: Cargo.toml
tests/official/level4/results/: result.hir
tests/official/pda-rent-payer/contract/: Cargo.toml
tests/official/pda-rent-payer/results/: result.hir  result.mir
tests/official/processing-instructions/contract/: Cargo.toml
tests/official/processing-instructions/results/: result.mir
tests/official/program-derived-addresses/contract/: Cargo.toml
tests/official/program-derived-addresses/results/: result.mir
tests/official/realloc/contract/: Cargo.toml
tests/official/realloc/results/: result.hir  result.mir
tests/official/rent/contract/: Cargo.toml
tests/official/rent/results/: result.hir  result.mir
tests/official/repository-layout/contract/: Cargo.toml
tests/official/transfer-sol/contract/: Cargo.toml
tests/official/transfer-sol/results/: result.hir
tests/official/vrust/level4/contract/: Cargo.toml  report.json
tests/official/vrust/level4/contract/vendored-spl-token-3.1.0/: Cargo.toml
tests/simple_solana_program/contract/: Cargo.toml
tests/simple_solana_program/contract/src/: lib.rs
tests/simple_solana_program/results/: result.hir  result.mir  result_no_overflow.hir  result_no_overflow.mir  result_simple.mir
tests/test_addition_overflow/contract/: Cargo.toml
tests/test_addition_overflow/contract/src/: lib.rs
tests/test_addition_overflow/results/: result.hir  result.mir
tests/test_addition_underflow/contract/: Cargo.toml
tests/test_addition_underflow/contract/src/: lib.rs
tests/test_addition_underflow/results/: result.hir  result.mir
tests/test_ownership_check/contract/: Cargo.toml
tests/test_ownership_check/contract/src/: lib.rs
tests/test_ownership_check/results/: result.hir  result.mir
tests/test_signer_check/contract/: Cargo.toml
tests/test_signer_check/contract/src/: lib.rs
tests/test_signer_check/results/: result.hir  result.mir
(+45 files in other folders)
