[package]
name = "level4"
version = "0.1.0"
edition = "2018"

[dependencies]
solana-program = "=1.7.17"
vendored-spl-token = { path = "vendored-spl-token-3.1.0", features = ["no-entrypoint"] }
borsh = "=0.9"
borsh-derive = "=0.9.1"

zeroize = "=1.6.0"
log = "=0.4.18"
byteorder = "=1.4.3"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
